src/objects/UI_Activity_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>A description of how the Participant was involved, what happened, any other information that may be of interest</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Person Profile for this Participant. You may have limited access to the Person profile.</inlineHelpText>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Involvement Participation</relationshipLabel>
        <relationshipName>UI_Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date the Involvement ended (may be the same date as Start Date)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <inlineHelpText>Were there any positive Outcomes for the Participant ? Select the primary Outcome only. If there were Outcomes of other types, comment that in the Detail.</inlineHelpText>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Community participation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental well being</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalisation and choice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_Notes__c</fullName>
        <inlineHelpText>Note information here that may help in deciding whether to ask this Participant’s assistance with similar Activities in the future and information about any changes in participant’s support needs.</inlineHelpText>
        <label>Results Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Consent_Detail__c</fullName>
        <inlineHelpText>Provide detail on the Specific Consent given, if relevant. You can also attach a scan of a paper form.</inlineHelpText>
        <label>Specific Consent Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Consent__c</fullName>
        <inlineHelpText>What type of specific Consent was given for this Participation?</inlineHelpText>
        <label>Specific Consent</label>
        <picklist>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The date the Activity took place for the Participant.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The Status of this Participation</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UI_Activity__c</fullName>
        <inlineHelpText>The Activity with which the Participant was Involved</inlineHelpText>
        <label>Involvement Activity</label>
        <referenceTo>UI_Activity__c</referenceTo>
        <relationshipLabel>Involvement Participation</relationshipLabel>
        <relationshipName>UI_Participation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>UI_Participant_Status__c</fullName>
        <formula>TEXT(UI_Participant__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The current status of the Participant&apos;s Involvement Consent</inlineHelpText>
        <label>Participant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Participant__c</fullName>
        <inlineHelpText>The Participant</inlineHelpText>
        <label>Participant</label>
        <referenceTo>UI_Participant__c</referenceTo>
        <relationshipLabel>Involvement Participation</relationshipLabel>
        <relationshipName>Participation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>User Involvement Participation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UI_Participant__c</columns>
        <columns>UI_Activity__c</columns>
        <columns>UI_Participant_Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APA-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involvement Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UI_Participation_Requires_Consent</fullName>
        <active>true</active>
        <description>Ensure there is consent on all Participation records</description>
        <errorConditionFormula>NOT( $User.IgnoreValidationRules__c ) &amp;&amp; Text(Specific_Consent__c)=&apos;&apos;</errorConditionFormula>
        <errorMessage>Some form of consent is required for all Participation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UI_Prevent_Participation_For_Not_Active</fullName>
        <active>true</active>
        <description>Prevent creation of new participation records for Participants that are not currently Active as regards participation.</description>
        <errorConditionFormula>NOT( $User.IgnoreValidationRules__c ) &amp;&amp; UI_Participant_Status__c != &apos;Active&apos;</errorConditionFormula>
        <errorMessage>Participants must be Status: Active with valid consent to Participate in an activity</errorMessage>
    </validationRules>
</CustomObject>